# OSINT-Tools

./: .gitignore  Dockerfile  README.md  cli.py  config.yml  dockerfile  main.py  pyproject.toml  setup.sh
.github/workflows/: docker-publish.yml
microvm/: MicroVM.md
ocr/: ocr.py
rss/: fetch_fulltext.py  rss_fetcher.py
static/: index.html  script.js  style.css
translate/: argos.py
ytdlp/: download_video.py
