[tool.poetry]
name = "osint-tools"
version = "0.1.0"
description = ""
authors = ["Ivan Ryan <ivan@ivanryan.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argostranslate = "^1.9.6"
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
yt-dlp = "^2024.5.27"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
