[tool.poetry]
name = "osint-tools"
version = "0.1.3"
description = "A collection of useful tools that can be used with the built-in frontend or using just the API."
authors = ["Ivan <team@quad4.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argostranslate = "^1.9.6"
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
yt-dlp = "^2024.5.27"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
easyocr = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
